fix(style) make submenu display on board, not behind

--- a/styles/scss/header.scss
+++ b/styles/scss/header.scss
@@ -106,6 +106,7 @@ nav form input:checked + label {
 
 .submenu {
   position: relative;
+  z-index: 1;
 }
 
 .submenu ul {
