--- a/styles/style.css
+++ b/styles/style.css
@@ -191,6 +191,7 @@ nav form input:checked + label {
 
 .submenu {
   position: relative;
+  z-index: 1;
 }
 
 .submenu ul {
